#################################################
#
#  (C) 2010-2012 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

add_subdirectory( printmgr )
add_subdirectory( kjobviewer )
add_subdirectory( kprinter )
add_subdirectory( kdeprintfax )
add_subdirectory( slave )
add_subdirectory( kdeprint_part )
